[project]

name = "ecs"
version = "0.0.1"
authors = ["Tom Bebbington <tophattedcoder@gmail.com>"]

[lib]

name = "ecs"
path = "src/lib.rs"

[[bin]]

name = "ecs"
path = "src/main.rs"

[dependencies.anymap]
git = "https://github.com/chris-morgan/anymap"

[dependencies.graphics]
git = "https://github.com/PistonDevelopers/rust-graphics"

[dependencies.opengl_graphics]
git = "https://github.com/PistonDevelopers/opengl_graphics"