[package]

name = "eccles"
version = "0.1.2"
description = "An Entity Component System in Rust focusing on speed and friendliness"
exclude = [ ".gitmodules", ".gitignore", ".travis.yml" ]
authors = [ "Tom Bebbington <tophattedcoder@gmail.com>" ]
documentation = "http://tombebbington.github.io/ecs.rs/"
keywords = [ "game", "ecs" ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/TomBebbington/ecs.rs"

[lib]

name = "eccles"
path = "src/lib.rs"

[[bin]]

name = "eccles"
path = "src/main.rs"
doc = false

[dependencies]
time = "*"