[package]

name = "eccles"
version = "0.2.3"
description = "An Entity Component System in Rust focusing on speed and user-friendliness"
authors = [ "Tom Bebbington <tophattedcoder@gmail.com>" ]
documentation = "http://tombebbington.github.io/ecs.rs/"
keywords = [ "game", "ecs" ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/TomBebbington/ecs.rs"

[lib]

name = "eccles"

[dependencies]

clock_ticks = "*"